# transponder

./: .gitignore  LICENSE  README.md  SCENARIOS.md  SPEC-v2.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release-gate.yml
ledger/: check.py  ledger.py  roll.json
repolock/: __init__.py  env.py  flight.py  invariants.py  lock.py  replay.py  scope.py  server.py  toggle.py  waitfor.py  witness.py
repolock/hooks/: claude_code.py  common.py  cursor.py
studies/: scope_study.py  scope_study2.py
tests/: conftest.py  test_adapters.py  test_ledger.py  test_lock.py  test_oracle.py  test_scope.py  test_toggle.py
transponder/: __init__.py  demo.py  env.py  flight.py  replay.py  scope.py  server.py  toggle.py  wait.py  witness.py
transponder/hooks/: __init__.py  claude_code.py  common.py
