[project]
name = "transponder"
version = "0.1.0"
description = "One developer, several AI agent sessions, one checkout — a lockfile convention (spec) plus its reference implementation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
# The core is pure stdlib, on purpose: a lock convention with a dependency tree is an
# adoption blocker. Everything heavier is an extra.
dependencies = []

# A GUI entry point, so the launcher is a windowless trampoline at a stable path
# (.venv/Scripts/transponder-tray.exe). The venv's own pythonw.exe is console-subsystem,
# which gives the tray a console window; closing it kills the icon.
[project.gui-scripts]
transponder-tray = "transponder.tray:main"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]
flight = ["flight-recorder @ git+https://github.com/xag/flight-recorder"]
tray = ["pystray>=0.19", "pillow>=10"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["transponder"]
